# HUJAM-2023-OPENGL

./: CMakeLists.txt  README.md
data/shaders/: def_tex_br.fs  def_tex_br.vs
src/: main.cpp
src/core/: br_object.c  br_object.h  br_texture.h  camera.c  camera.h  core.h  ins_object.c  ins_object.h  lighting.c  object.c  object.h  shaders.c  shaders.h  window.c
src/game/: bar.h  bottle.h  fluids.h  game.h  intro.h  mainmenu.h  obstacle.h  prepare_drink.cpp  prepare_drink.h  quad.cpp  quad.h
